methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:20: error: ')' expected but 'return' found.
    return biscuit
    ^