methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var biscuit:Boolean=false
  avance()
  while (getCouleurSol()==Color.green){
    baisseBrosse()
    leveBrosse()
    recule()
    avance()
    avance()
    }
    if (estSurBiscuit==true){
      biscuit=true
    }
  if (getCouleurSol{
      recule()
      gauche()
      avance()
    }
  	return biscuit
}
    
    // Write your code here